--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 .head{
   text-align: center;
+  margin: 30px;
 }
 
 .head input {
+	margin: 0px auto;
   display: block;
   font-size: 20px;
-  width: 300px;
+  width: 400px;
 }
+
 
 td {
   font-size: 18px;
