--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,11 @@
+body {
+    background: #EEEEEE;
+}
+
+.container {
+    margin-top: 20px;
+}
+
 input {
   font-size: 18px;
 }
@@ -21,4 +29,9 @@ td {
 
 .champion-icon {
     display: inline-block;
+}
+
+.half-size-icon {
+    width:60px;
+    height:60px;
 }
