--- a/app/css/style.css
+++ b/app/css/style.css
@@ -51,3 +51,17 @@ td {
     width: 165px;
     height: 300px;
 }
+
+.champion-tags li {
+    display: inline-block;
+    padding: 5px 8px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    border-radius: 3px;
+    background-color: #FA8072;
+    text-transform: uppercase;
+    font-size: 0.875em;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: white;
+}
