--- a/app/css/style.css
+++ b/app/css/style.css
@@ -23,7 +23,7 @@ td {
 }
 
 .table-wraper {
-    height: 600px;
+    height: 580px;
     overflow: auto;
 }
 
@@ -34,6 +34,13 @@ td {
 .half-size-icon {
     width:60px;
     height:60px;
+}
+
+#champion-avatar {
+    float: left;
+    padding-right: 15px;
+    width: 20%;
+    height: 20%;
 }
 
 #championName {
